js/js.translator/testData/incremental/invalidation/nestedClass/lib1/l1.6.kt
data class MyClass(val unusedField: String) {
    class NestedClass {
        inline fun foo() = field

        val field = 6
    }

    fun unusedFunction() = -1
}
